appId: app.maestro.expo.testing
name: Pull 2117 (swiping from -> to)
onFlowComplete:
  - tapOn: Back
---
- tapOn:
    text: Wheel Picker
- assertVisible:
    text: "Selected: Item 1"
- swipe:
    from:
        id: "scrollWheel"
    to: 50%, 47% # x, y
- assertVisible:
    text: "Selected: Item 2"
- swipe:
    from:
        id: "scrollWheel"
    to: 50%, 47% # x, y
- assertVisible:
    text: "Selected: Item 3"
- swipe:
    from:
        id: "scrollWheel"
    to: 50%, 47% # x, y
- assertVisible:
    text: "Selected: Item 4"
- swipe:
    from:
        id: "scrollWheel"
    to: 50%, 47% # x, y
- assertVisible:
    text: "Selected: Item 5"
- swipe:
    from:
        id: "scrollWheel"
    to: 50%, 58% # x, y
- assertVisible:
    text: "Selected: Item 4"
- swipe:
    from:
        id: "scrollWheel"
    to: 50%, 58% # x, y
- assertVisible:
    text: "Selected: Item 3"
- swipe:
    from:
        id: "scrollWheel"
    to: 50%, 58% # x, y
- assertVisible:
    text: "Selected: Item 2"
- swipe:
    from:
        id: "scrollWheel"
    to: 50%, 58% # x, y
- assertVisible:
    text: "Selected: Item 1"